--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
 
   <target name="compile" depends="init" description="Compile the source code">
     <mkdir dir="${classes.dir}"/>
-    <javac srcdir="${src.dir}" destdir="${classes.dir}" debug="true" source="1.5" target="1.5">
+    <javac includeantruntime="false" srcdir="${src.dir}" destdir="${classes.dir}" debug="true" source="1.6" target="1.6">
       <classpath>
         <fileset dir="${lib.dir}">
           <include name="jsp-api-2.1.jar"/>
@@ -36,7 +36,7 @@
           <include name="el-ri-1.5.0.jar"/>
         </fileset>
         <fileset dir="${jsf.ri.lib.dir}">
-          <include name="javax.faces-2.1.11.jar"/>
+          <include name="javax.faces-2.2.6.jar"/>
         </fileset>
         <fileset dir="${portlets.lib.dir}">
           <include name="exoportal-stub.jar"/>
